tdf#134784 DOCX import: fix shape paragraph margins

based on bad style inheritance.

Regression from commit dc0300eac3b755bc207cd1fe87217f4ebaeb9f58
(tdf#118521 DOCX import: fix paragraph margin from paragraph style).

Change-Id: Icc7f70452d946d56dc840d39545d850f74f97ebc